<resources>
    <string name="app_picker_name">Applications</string>
    <string name="bookmark_picker_name">Bookmarks</string>
    <string name="button_add_calendar">Add to calendar</string>
    <string name="button_add_contact">Add contact</string>
    <string name="button_back">Back</string>
    <string name="button_book_search">Book Search</string>
    <string name="button_cancel">Cancel</string>
    <string name="button_clipboard_empty">Clipboard empty</string>
    <string name="button_custom_product_search">Custom search</string>
    <string name="button_dial">Dial number</string>
    <string name="button_done">Done</string>
    <string name="button_email">Send email</string>
    <string name="button_get_directions">Get directions</string>
    <string name="button_google_shopper">Google Shopper</string>
    <string name="button_mms">Send MMS</string>
    <string name="button_ok">OK</string>
    <string name="button_open_browser">Open browser</string>
    <string name="button_product_search">Product Search</string>
    <string name="button_read_book">Browse book</string>
    <string name="button_search_book_contents">Search contents</string>
    <string name="button_share_app">Application</string>
    <string name="button_share_bookmark">Bookmark</string>
    <string name="button_share_by_email">Share via email</string>
    <string name="button_share_by_sms">Share via SMS</string>
    <string name="button_share_clipboard">Clipboard</string>
    <string name="button_share_contact">Contact</string>
    <string name="button_show_map">Show map</string>
    <string name="button_sms">Send SMS</string>
    <string name="button_web_search">Web search</string>
    <string name="button_wifi">Connect to Network</string>
    <string name="contents_contact">Contact info</string>
    <string name="contents_email">Email address</string>
    <string name="contents_location">Geographic coordinates</string>
    <string name="contents_phone">Phone number</string>
    <string name="contents_sms">SMS address</string>
    <string name="contents_text">Plain text</string>
    <string name="history_clear_text">Clear history</string>
    <string name="history_email_title">Barcode Scanner history</string>
    <string name="history_send">Send history</string>
    <string name="history_title">History</string>
    <string name="menu_about">About</string>
    <string name="menu_help">Help</string>
    <string name="menu_history">History</string>
    <string name="menu_settings">Settings</string>
    <string name="menu_share">Share</string>
    <string name="msg_about">Based on the open source ZXing Barcode Library</string>
    <string name="msg_buggy">This device has known bugs that cause barcode
		scanning problems. For more information, visit
		http://code.google.com/p/zxing/wiki/FrequentlyAskedQuestions</string>
    <string name="msg_bulk_mode_scanned">Bulk mode: barcode scanned and saved</string>
    <string name="msg_camera_framework_bug">Sorry, the Android camera encountered a problem.
		You may need to restart the device.</string>
    <string name="msg_default_contents">Contents</string>
    <string name="msg_default_format">Format</string>
    <string name="msg_default_meta">Metadata</string>
    <string name="msg_default_mms_subject">Hi</string>
    <string name="msg_default_status">Place a barcode inside the viewfinder rectangle to
		scan it.</string>
    <string name="msg_default_time">Time</string>
    <string name="msg_default_type">Type</string>
    <string name="msg_encode_barcode_failed">Could not generate the requested barcode.</string>
    <string name="msg_encode_contents_failed">Could not encode a barcode from the data provided.</string>
    <string name="msg_google_shopper_missing">Google Shopper is not installed</string>
    <string name="msg_install_google_shopper">Google Shopper combines barcode scanning with
		online and local prices, reviews and more without opening the browser.
		Would you like to try it?</string>
    <string name="msg_intent_failed">Sorry, the requested application could not be
		launched. The barcode contents may be invalid.</string>
    <string name="msg_loading_apps">Loading list of applications\u2026</string>
    <string name="msg_not_our_results">You are leaving this application. The search
		results you will see are not related to this application.</string>
    <string name="msg_sbc_book_not_searchable">Sorry, this book is not searchable.</string>
    <string name="msg_sbc_failed">Sorry, the search encountered a problem.</string>
    <string name="msg_sbc_no_page_returned">No page returned</string>
    <string name="msg_sbc_page">Page</string>
    <string name="msg_sbc_searching_book">Searching book\u2026</string>
    <string name="msg_sbc_snippet_unavailable">Snippet not available</string>
    <string name="msg_sbc_unknown_page">Unknown page</string>
    <string name="msg_share_explanation">You can share data by displaying a barcode on your
		screen and scanning it with another phone.</string>
    <string name="msg_share_subject_line">Here\'s the contents of a barcode I scanned</string>
    <string name="msg_unmount_usb">Sorry, the SD card is not accessible.</string>
    <string name="preferences_actions_title">When a barcode is found\u2026</string>
    <string name="preferences_bulk_mode_summary">Scan and save many barcodes continuously</string>
    <string name="preferences_bulk_mode_title">Bulk scan mode</string>
    <string name="preferences_copy_to_clipboard_title">Copy to clipboard</string>
    <string name="preferences_custom_product_search_summary">Use s as a placeholder for the product ID, and f
		for format</string>
    <string name="preferences_custom_product_search_title">Custom search URL</string>
    <string name="preferences_decode_1D_title">Decode 1D barcodes</string>
    <string name="preferences_decode_Data_Matrix_title">Decode Data Matrix</string>
    <string name="preferences_decode_QR_title">Decode QR Codes</string>
    <string name="preferences_front_light_summary">Improves scanning in low light on some phones, but
		may cause glare. Does not work on all phones.</string>
    <string name="preferences_front_light_title">Use front light</string>
    <string name="preferences_general_title">General settings</string>
    <string name="preferences_name">Settings</string>
    <string name="preferences_play_beep_title">Beep</string>
    <string name="preferences_result_title">Result settings</string>
    <string name="preferences_scanning_title">When scanning for barcodes\u2026</string>
    <string name="preferences_vibrate_title">Vibrate</string>
    <string name="result_address_book">Found contact info</string>
    <string name="result_calendar">Found calendar event</string>
    <string name="result_email_address">Found email address</string>
    <string name="result_geo">Found geographic coordinates</string>
    <string name="result_isbn">Found book</string>
    <string name="result_product">Found product</string>
    <string name="result_sms">Found SMS address</string>
    <string name="result_tel">Found phone number</string>
    <string name="result_text">Found plain text</string>
    <string name="result_uri">Found URL</string>
    <string name="result_wifi">Found Wifi Configuration</string>
    <string name="sbc_name">Google Book Search</string>
    <string name="share_name">Share via barcode</string>
    <string name="title_about">Barcode Scanner v</string>
    <string name="wa_name">Wifi Connection</string>
    <string name="wifi_changing_network">Changing Network</string>
    <string name="wifi_connected">Connected</string>
    <string name="wifi_creating_network">Creating Network</string>
    <string name="wifi_modifying_network">Modifying Network</string>
    <string name="wifi_ssid_missing">Network name missing</string>
    <string name="wifi_type_incorrect">Network type incorrect</string>
    <string name="wifi_connect_failed">Network connection failed</string>
    <string name="wifi_ssid_label">Network Name</string>
    <string name="wifi_type_label">Type</string>
    <string name="zxing_url">http://code.google.com/p/zxing</string>
    <string name="hello">Hello World, PresentationScreen!</string>
    <string name="app_name">Maispreco</string>
    <string name="about">About</string>
    <string name="about_mais_preco">About Mais Preço</string>
    <string name="contact_us">Contact Us</string>
    <string name="help">Help</string>
    <string name="n5items">5 items</string>
    <string name="n10items">10 items</string>
    <string name="n30items">30 items</string>
    <string name="items_per_page">Items per Page</string>
    <string name="to">To : </string>
    <string name="cc_bcc">Cc/Bcc : </string>
    <string name="subject">Subject : </string>
    <string name="sobreomaispreco">Sobre o Mais Preço</string>
    <string name="contact">contato@maispreco.com</string>
    <string name="subject1">Fale Conosco</string>
    <string name="about_header">O que é o Mais Preço?</string>
    <string name="abount_content1">O Mais Preço é uma ferramenta de pesquisa de
		medicamentos de uso gratuito, que ajuda o consumidor a poupar tempo e
		dinheiro ao comprar pela internet. O Mais Preço não é uma loja, não
		vende nada, e também não é uma ferramenta de busca genérica.
		Oferecemos informações completas e imparciais sobre milhares de
		produtos e lojas, ajudando o consumidor a decidir o quê e onde
		comprar.</string>
    <string name="abount_header2">Quem somos?</string>
    <string name="abount_content2">O Mais Preço teve seu início em janeiro de 2011,
		quando seus fundadores sentiram a necessidade de um novo tipo de
		ferramenta de busca, direcionada a quem procura por um medicamento ou
		pelo melhor preço na internet. Com o objetivo de oferecer recursos que
		facilitem a vida do consumidor, trabalhamos arduamente desenvolvendo
		uma tecnologia que concentrasse e gerenciasse as informações sobre os
		produtos ofertados via web e em abril de 2011 foi lançado o Mais
		Preço, o mais completo site de pesquisa de medicamentos da internet
		brasileira.</string>
    <string name="help_header1">Dicas de Procura do Mais Preço:</string>
    <string name="help_content1">Aqui vão algumas dicas para que você encontre o produto que procura mais facilmente.</string>
    <string name="help_header2">1. Descrição</string>
    <string name="help_content2">Ao procurar por um produto ou serviço no Mais Preço, seja o mais genérico possível. Utilize apenas uma ou duas palavras, evite sentenças longas ou excesso de itens na descrição. Por exemplo: \"Paracetamol\" ao invés de \"Paracetamol Gotas Genérico 15 ml\". Você poderá especificar melhor os detalhes quando chegar na página de resultados, utilizando nosso refino.</string>
    <string name="help_header3">2. Não utilize \"e\" ou \"ou\"</string>
    <string name="help_content3">Nosso sistema de busca não reconhece \"e\" ou \"ou\" como termos de busca, e elas podem atrapalhar o sistema.</string>
    <string name="help_header4">3. Evite utilizar pontuação eou símbolos</string>
    <string name="help_content4">Procure utilizar apenas palavras em sua busca. Caracteres como (e.g.,?, !, &amp;, @ or $) normalmente não trazem resultados satisfatórios. Quando se trata de marcas como \"Jonhson &amp; Jonhson\", utilize \"Jonhson Jonhson\". Não utilize também símbolos relativos a moedas.</string>
    <string name="help_header5">4. Não digite endereços da internet</string>
    <string name="help_content5">Nunca busque por \"www.nomedamarca.com.br\". Procure sempre palavras relacionadas a produtos e ou categorias, utilizando apenas a marca e o substantivo que faz referência ao nome de um produto.</string>
    <string name="help_header6">5. Não use abreviaturas ou palavras digitadas juntas</string>
    <string name="help_content6">Sempre digite o nome mais comum de um produto. Por exemplo: Ao invés de \"paracetamolgotas\" opte por Paracetamol Gotas.</string>
</resources>