<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
  xmlns:android="http://schemas.android.com/apk/res/android"
  android:orientation="vertical"
  android:layout_width="fill_parent"
  android:background="#ffffff" android:layout_height="fill_parent">
    <ScrollView android:layout_width="fill_parent" android:id="@+id/scrollView1" android:layout_height="fill_parent" android:padding="10dip">
        <LinearLayout android:id="@+id/linearLayout1" android:layout_width="fill_parent" android:layout_height="fill_parent" android:orientation="vertical">
            <TextView android:id="@+id/textView1" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="Central de Ajuda" android:typeface="serif" android:textColor="#1dace9" android:textSize="18dip" android:textStyle="bold" android:layout_marginBottom="20dip"></TextView>
            <TextView android:textColor="#000000" android:id="@+id/TextView01" android:layout_width="wrap_content" android:textStyle="bold" android:typeface="serif" android:textAppearance="?android:attr/textAppearanceSmall" android:textSize="14dip" android:layout_height="wrap_content" android:text="@string/help_header1"></TextView>
            <TextView android:textColor="#000000" android:id="@+id/TextView03" android:layout_width="wrap_content" android:typeface="serif" android:textAppearance="?android:attr/textAppearanceSmall" android:textSize="14dip" android:text="@string/help_content1" android:layout_height="wrap_content"></TextView>
            <TextView android:textColor="#000000" android:id="@+id/TextView04" android:layout_width="wrap_content" android:textStyle="bold" android:typeface="serif" android:textAppearance="?android:attr/textAppearanceSmall" android:textSize="14dip" android:layout_height="wrap_content" android:layout_marginTop="15dip" android:text="@string/help_header2"></TextView>
            <TextView android:textColor="#000000" android:id="@+id/TextView02" android:layout_width="wrap_content" android:typeface="serif" android:textAppearance="?android:attr/textAppearanceSmall" android:textSize="14dip" android:layout_height="wrap_content" android:text="@string/help_content2"></TextView>
            <TextView android:textColor="#000000" android:id="@+id/TextView06" android:layout_width="wrap_content" android:textStyle="bold" android:typeface="serif" android:textAppearance="?android:attr/textAppearanceSmall" android:textSize="14dip" android:layout_height="wrap_content" android:layout_marginTop="15dip" android:text="@string/help_header3"></TextView>
            <TextView android:textColor="#000000" android:id="@+id/TextView07" android:layout_width="wrap_content" android:typeface="serif" android:textAppearance="?android:attr/textAppearanceSmall" android:textSize="14dip" android:layout_height="wrap_content" android:text="@string/help_content3"></TextView>
            <TextView android:textColor="#000000" android:id="@+id/TextView08" android:layout_width="wrap_content" android:textStyle="bold" android:typeface="serif" android:textAppearance="?android:attr/textAppearanceSmall" android:textSize="14dip" android:layout_height="wrap_content" android:layout_marginTop="15dip" android:text="@string/help_header4"></TextView>
            <TextView android:textColor="#000000" android:id="@+id/TextView05" android:layout_width="wrap_content" android:typeface="serif" android:textAppearance="?android:attr/textAppearanceSmall" android:textSize="14dip" android:layout_height="wrap_content" android:text="@string/help_content4"></TextView>
            <TextView android:textColor="#000000" android:id="@+id/TextView09" android:layout_width="wrap_content" android:textStyle="bold" android:typeface="serif" android:textAppearance="?android:attr/textAppearanceSmall" android:textSize="14dip" android:layout_height="wrap_content" android:layout_marginTop="15dip" android:text="@string/help_header5"></TextView>
            <TextView android:textColor="#000000" android:id="@+id/TextView10" android:layout_width="wrap_content" android:typeface="serif" android:textAppearance="?android:attr/textAppearanceSmall" android:textSize="14dip" android:layout_height="wrap_content" android:text="@string/help_content5"></TextView>
            <TextView android:textColor="#000000" android:id="@+id/TextView11" android:layout_width="wrap_content" android:textStyle="bold" android:typeface="serif" android:textAppearance="?android:attr/textAppearanceSmall" android:textSize="14dip" android:layout_height="wrap_content" android:layout_marginTop="15dip" android:text="@string/help_header6"></TextView>
            <TextView android:textColor="#000000" android:id="@+id/TextView12" android:layout_width="wrap_content" android:typeface="serif" android:textAppearance="?android:attr/textAppearanceSmall" android:textSize="14dip" android:layout_height="wrap_content" android:text="@string/help_content6"></TextView>
            <TextView android:textAppearance="?android:attr/textAppearanceMedium" android:layout_height="wrap_content" android:layout_width="wrap_content" android:textColor="#747474" android:id="@+id/tVConentAboutHelp" android:textSize="12dip"></TextView>
        </LinearLayout>
    </ScrollView>
    
</LinearLayout>
