<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
  xmlns:android="http://schemas.android.com/apk/res/android"
  android:orientation="vertical"
  android:layout_width="fill_parent"
  android:background="#ffffff" android:layout_height="fill_parent">
    <ScrollView android:layout_width="fill_parent" android:id="@+id/scrollView1" android:layout_height="fill_parent" android:padding="10dip">
        <LinearLayout android:id="@+id/linearLayout1" android:layout_width="fill_parent" android:layout_height="fill_parent" android:orientation="vertical">
            <TextView android:id="@+id/textView1" android:layout_height="wrap_content" android:textAppearance="?android:attr/textAppearanceMedium" android:layout_width="wrap_content" android:typeface="serif" android:textStyle="bold" android:text="@string/sobreomaispreco" android:textColor="#1dace9" android:textSize="17dip" android:layout_marginBottom="20dip"></TextView>
            <TextView android:textAppearance="?android:attr/textAppearanceMedium" android:layout_height="wrap_content" android:layout_width="wrap_content" android:textColor="#747474" android:id="@+id/tVConentAboutHelp" android:textSize="12dip"></TextView>
            <TextView android:textColor="#000000" android:id="@+id/TextView01" android:layout_width="wrap_content" android:textStyle="bold" android:typeface="serif" android:textAppearance="?android:attr/textAppearanceSmall" android:textSize="14dip" android:text="@string/about_header" android:layout_height="wrap_content"></TextView>
            <TextView android:textColor="#000000" android:id="@+id/TextView02" android:layout_width="wrap_content" android:typeface="serif" android:textAppearance="?android:attr/textAppearanceSmall" android:textSize="14dip" android:text="@string/abount_content1" android:layout_height="wrap_content"></TextView>
            <TextView android:id="@+id/textView2" android:layout_width="wrap_content" android:textAppearance="?android:attr/textAppearanceSmall" android:layout_height="wrap_content" android:textColor="#000000" android:textSize="14dip" android:textStyle="bold" android:typeface="serif" android:text="@string/abount_header2" android:layout_marginTop="15dip"></TextView>
            <TextView android:id="@+id/textView3" android:layout_width="wrap_content" android:textAppearance="?android:attr/textAppearanceSmall" android:layout_height="wrap_content" android:textColor="#000000" android:textSize="14dip" android:typeface="serif" android:text="@string/abount_content2"></TextView>
        </LinearLayout>
    </ScrollView>
    
</LinearLayout>
